<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">嘟仔投</string>
    <string name="loading_text">加载中...</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="code_str">获取验证码</string>
    <string name="user_read">我已阅读并同意</string>
    <string name="user_agreement_str">《嘟仔投网站服务协议》</string>
    <string name="reg_but_str">注册</string>
    <string name="has_user_name">已有账号，</string>
    <string name="has_not_usr_name">没有账号，</string>
    <string name="gotoRegion">立即注册</string>
    <string name="gotoLogin">立即登陆</string>
    <string name="user_region_hit">请输入手机号码</string>
    <string name="user_region_code_hit">请输入验证码</string>
    <string name="user_region_password_hit">请输入密码</string>
    <string name="home_home_str">首页</string>
    <string name="home_project_str">项目</string>
    <string name="home_my_str">我</string>
    <string name="home_other_str">更多</string>
    <string name="user_login_str">登录</string>
    <string name="forgot_password_str">忘记密码？</string>
    <string name="hot_project_str">最热项目</string>
    <string name="financing_progress_str">融资进度：</string>
    <string name="user_sms_str">站内短信</string>
    <string name="financing_origin_str">融资起点：</string>
    <string name="user_attention_project_str">关注项目</string>
    <string name="user_meet_project_str">约谈项目</string>
    <string name="user_data_str">个人资料</string>
    <string name="user_account_str">我的账号</string>
    <string name="project_managerment_str">项目管理</string>
    <string name="user_safety_center_str">安全中心</string>
    <string name="save_str">保存</string>
    <string name="i_am_str">我是</string>
    <string name="i_am_woman">女士</string>
    <string name="i_am_man">男士</string>
    <string name="user_data_user_name_str">用户名：</string>
    <string name="user_data_user_true_name_str">真是姓名：</string>
    <string name="user_data_id_card_str">身份证</string>
    <string name="user_data_true_name_str">姓名</string>
    <string name="user_data_email_str">邮箱</string>
    <string name="user_data_now_address_str">当前住址</string>
    <string name="user_data_referrer_str">推荐人</string>
    <string name="user_data_age_str">年龄</string>
    <string name="user_data_address_str">所在地</string>
    <string name="change_pass_word_str">修改密码</string>
    <string name="user_account_balance_str">账户余额(元)</string>
    <string name="user_account_pay_str">充值</string>
    <string name="user_account_withdraw_deposits_str">提现</string>
    <string name="user_account_freeze_money_str">冻结金额</string>
    <string name="user_account_available_money_str">可用金额</string>
    <string name="user_accoutn_bank_card_str">银行卡</string>
    <string name="user_account_serial_number_str">流水查询</string>
    <string name="user_account_dividend_management_str">分红管理</string>
    <string name="reset_password_verification_code_str">验证码</string>
    <string name="reset_pass_word_old_pssword_str">原密码</string>
    <string name="reset_pass_word_new_pssword_str">新密码</string>
    <string name="user_withdraw_deposit_bank_card_str">银行卡</string>
    <string name="user_withdraw_deposit_money_str">提现</string>
    <string name="user_withdraw_deposit_poundage_money_str">手续费</string>
    <!-- 下面是测试信息 -->
    <string name="test_comany_name">重庆XXXX科技有限公司</string>
    <string name="test_str">简介:百度（Nasdaq：BIDU）是全球最大的中文搜索引擎、最大的中文网站。2000年1月由李彦宏创立于北京中关村，致力于向人们提供“简单，可依赖”的信息获取方式。“百度”二字源于中国宋朝词人辛弃疾的《青玉案·元夕》词句“众里寻他千百度”，象征着百度对中文信息检索技术的执著追求。</string>

</resources>