<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3"
            android:src="@drawable/region_log" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_linelayout_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:padding="5dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/user_phone" />

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="#FFFFFF"
                    android:hint="@string/user_region_hit"
                    android:textColor="@color/wrord_color"
                    android:ems="11"
                    android:inputType="phone"
                    android:textSize="12sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_linelayout_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="7dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/code" />

                    <EditText
                        android:id="@+id/user_verification_code"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:hint="@string/user_region_code_hit"
                        android:textColor="@color/wrord_color"
                        android:textSize="12sp"
                        tools:ignore="TextFields" >
                    </EditText>
                </LinearLayout>

                <Button
                    android:id="@+id/verification_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/edit_linelayout_bg"
                    android:text="获取验证码"
                    android:textColor="@color/wrord_color"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_linelayout_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:padding="5dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/user_phone" />

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:background="#FFFFFF"
                    android:hint="@string/user_region_password_hit"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    tools:ignore="TextFields" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/need_user_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/user_check" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/user_read"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/read_user_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:text="@string/user_agreement_str"
                    android:textColor="@color/main_color"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/user_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/yellow_circular_bead"
                android:padding="10dp"
                android:text="@string/reg_but_str"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/has_user_name"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/goto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:text="@string/gotoLogin"
                    android:textColor="@color/wrord_red"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>