<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_tab_bottom"
    android:layout_width="fill_parent"
    android:layout_height="55dp"
    android:layout_alignParentBottom="true"
    android:background="#F8F8F8" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#FFFFFF" >

        <LinearLayout
            android:id="@+id/id_tab_bottom_weixin"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical"
            android:tag="one" >

            <ImageButton
                android:id="@+id/btn_tab_bottom_weixin"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/home"
                android:clickable="false" />

            <TextView
                android:id="@+id/home_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/home_home_str"
                android:textColor="@color/word_black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_friend"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical"
            android:tag="two" >

            <ImageButton
                android:id="@+id/btn_tab_bottom_friend"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/project"
                android:clickable="false" />

            <TextView
                android:id="@+id/home_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/home_project_str"
                android:textColor="@color/word_black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_contact"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical"
            android:tag="three" >

            <ImageButton
                android:id="@+id/btn_tab_bottom_contact"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/my"
                android:clickable="false" />

            <TextView
                 android:id="@+id/home_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/home_my_str"
                android:textColor="@color/word_black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_setting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical"
            android:tag="four" >

            <ImageButton
                android:id="@+id/btn_tab_bottom_setting"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/other"
                android:clickable="false" />

            <TextView
                android:id="@+id/home_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/home_other_str"
                android:textColor="@color/word_black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>